tests/type-reconstruction/ill-typed/infinite-type/infinite-type-1.stella
language core;

extend with #type-reconstruction;

fn main(f : auto) -> Nat {
  return f(f)
}